# examples

./: .gitignore  .gitmodules  2023年度openGauss标杆应用实践案例申报表.docx  2024年度openGauss标杆应用实践案例申报表.docx  OpenGaussCompatibleFunction  README.en.md  README.md  app.js  config.js  openGauss用户组报名表.docx  openGauss联合方案模板.pptx  project.config.json  sss  【评选通知附件】2023年度openGauss领先商业案例申报书.docx  基于C3P0框架的openGauss数据库测试.md  基于C3P0框架的openGauss数据库测试设计 .emmx
Airbyte_Destination_openGaussDataVec/: README.md  airbyte对接openGauss DataVec.md  openGauss_DataVec_Connector_Document.md  openGauss_DataVec_Connector_Document.zh.md
Airbyte_Destination_openGaussDataVec/Practical-Case-Tutorial/: chatbot.py  pyproject.toml  实践案例教程.md
Airbyte_Destination_openGaussDataVec/destination-opengauss-datavec/: README.md
Apify-Opengauss-Integration/Practical-Case-Tutorial/: apify-opengauss.py  openGauss-apify实践.md
DPDLDA/: README.md  export_model.py  model.py  train_classification.py
Database_SemiTest/: tempCodeRunnerFile.python
Database_SemiTest/R-tree-demol2-Verifiable/: ORE2.py  anti21000  test  test212
Database_SemiTest/dataset/: anti_1_1000.txt  anti_2_100000.txt  anti_2_11000.txt  anti_2_3000.txt  anti_2_5000.txt  anti_2_50000.txt  anti_2_7000.txt  anti_2_9000.txt  anti_4_1000.txt  corr_2_1000.txt  corr_2_100000.txt  corr_2_11000.txt  corr_2_3000.txt  corr_2_5000.txt  corr_2_50000.txt  corr_2_7000.txt  corr_2_9000.txt  hotel_2_2000.txt  hotel_2_3000.txt  hotel_2_4000.txt  hotel_2_5000.txt  hotel_2_6000.txt  hotel_3_1000.txt  hotel_5_1000.txt  hotel_6_1000.txt  inde_1_1000.txt  inde_2_100000.txt  inde_2_11000.txt  (+7 more)
DotNetLogin/: DotNetLogin.csproj  DotNetLogin.sln  Program.cs  Startup.cs  appsettings.json  readme.md
ER-Model/: README.md
ER-Modeling/: .gitignore  README.md  pom.xml
ERModel/: .gitignore  README.md  build.sh  idea-debug-plugins-api-build.sh
JavaLogin/: pom.xml  readme.md
Milvus2openGauss/: README.md  generate_all.py  milvus2opengauss.py  test.py
Mongodb2openGauss/: config.js  data_model.js  db_details.json  mongo_db.js  package.json
MySQL2openGauss/: build_aarch64.sh  build_x86.sh
OpenGaussPrivilegeScan/: README.md  pom.xml
OpengaussCompatibility2hikari/: pom.xml
PhpConnectorWithOpenGauss/: PHP Connector with OpenGauss v2.0.md  PhpContion.php
SparkOpOpenGauss/: README.md  pom.xml
Sysbench4RedisAndMot/: README-WIN.txt  README.mot.md  README.redis.md
UserPortrait/: README.md
VerifyJDBCDataType/: pom.xml
djangoOpenGauss/: LICENSE  README.md  pyproject.toml
djangoOpenGauss/src/django_opengauss/: __init__.py  base.py  client.py  creation.py  features.py  introspection.py  operations.py  pool.py  schema.py
djangoOpenGauss/src/django_opengauss.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
djangoOpenGauss/tests/: README.md  coverage_tests.py  full_stack_env.py  functional_test_results.json  functional_tests.py  performance_compare.json  performance_compare.sqlite3  performance_quick_results.json  performance_tests.py
hibernateTest/: pom.xml
kotaemon/: flowsettings.py
memGPT-openGauss/: .env.example  DEPLOYMENT_GUIDE.md  ENV_VARIABLES_FIX_REPORT.md  OPENGAUSS_INITIALIZATION_SUMMARY.md  OPENGAUSS_INTEGRATION_SUCCESS.md  OPENGAUSS_INTEGRATION_SUMMARY.md  README.md  docker-compose.opengauss.yml  init.sql  pyproject.toml
memGPT-openGauss/alembic/: env.py
memGPT-openGauss/letta/: config.py  settings.py
memGPT-openGauss/letta/docs/: opengauss_database_initialization.md
memGPT-openGauss/letta/examples/: audit_system_demo.py
memGPT-openGauss/letta/schemas/: embedding_config.py
memGPT-openGauss/letta/server/: db.py  startup.sh
mongodb2openGauss/: README.md  create_db.js  migrate_data.js  openguass_db.js  package-lock.json
ogx/: .gitignore  Makefile  README.md  db.go  go.mod  go.sum  hook.go  model.go  model_map.go  model_map_slice.go  model_scan.go  model_slice.go  model_table_has_many.go  model_table_m2m.go  model_table_slice.go  model_table_struct.go  ogx.go  query_base.go  query_column_add.go  query_column_drop.go  query_delete.go  query_index_create.go  query_index_drop.go  query_insert.go  query_raw.go  query_select.go  query_table_create.go  query_table_drop.go  query_table_truncate.go  query_update.go  query_values.go  relation_join.go  util.go  version.go
openGauss-AIEval/: 结项报告.md
openGaussDialect/: pom.xml
openSUSE_RPM_package/: .gitattributes  DCF-6.0.0-add-more-arch-support.patch  DCF_susebuild.patch  Huawei_Secure_C_Makefile  README.md  autostart.sh  aws-sdk-cpp-1.11.327.tar.xz  dmlc-core-port-to-newer-cmake.patch  krb-configure  krb5-CVE-2023-36054.patch  krb5-backport-Add-a-simple-DER-support-header.patch  krb5-backport-CVE-2024-37370-CVE-2024-37371-Fix-vulnerabilities-in-GSS-message-token-handling.patch  krb5-cve-2022-42898.patch  krb5.patch  og-cmake.patch  og-delete-obs.patch  og-dolphin.patch  og-more-arch-support.patch  og-openssl3-adptor.patch  og-susebuild.patch  opengauss-bashprofile  opengauss-rpmlintrc  opengauss.changes  opengauss.service  opengauss.spec  upgrade.sh  version.cfg  xgboost-cmake-3.13.patch
opengauss-embedding/: .env.example  README.md  requirements.txt
opengauss_hitwh/code/human_pose_estimation/open_model_zoo/demos/human_pose_estimation_demo_meng/: CMakeLists.txt  main.cpp
opengauss_hitwh/code/human_pose_estimation/open_model_zoo/demos/human_pose_estimation_demo_meng/include/: dlib_face.hpp  human_pose.hpp  human_pose_estimation_demo.hpp  human_pose_estimator.hpp
opengauss_hitwh/code/human_pose_estimation/open_model_zoo/demos/human_pose_estimation_demo_meng/include/librealsense2/hpp/: rs_frame.hpp
opengauss_hitwh/code/human_pose_estimation/open_model_zoo/demos/human_pose_estimation_demo_meng/src/: dlib_face.cpp  human_pose_estimator.cpp
opengausss_orz/: README.md  database.ini  orz.py  requirements.txt
ospp/: pom.xml
ospp_openGauss/: pom.xml
ospp_privateGPT/: Dockerfile.ubuntu  README.md  docker-compose.yaml  settings-ollama-gauss.yaml  settings.yaml
sqlTranslate/: pom.xml
utils/: http.js
whyhow/: .env.sample  README.md  requirements.txt
whyhow_ospp/: .env.sample  main.py
(+1739 files in other folders)
