[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-opengauss"
version = "1.0.2"
description = "Django database backend for openGauss."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "openGauss Community"}
]
keywords = ["django", "opengauss", "database", "backend"]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
  "Django>=3.2",
  "psycopg2-binary>=2.9"
]

[project.urls]
"Homepage" = "https://gitee.com/opengauss"
"Source" = "https://gitee.com/opengauss"

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_opengauss*"]

[tool.setuptools]
package-dir = {"" = "src"}
